--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,12 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [      
         {
-            "type": "pwa-chrome",
+            "type": "pwa-msedge",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "name": "Launch Edge against localhost",
+            "url": "file:///D:/different/Frontend/MyProjects/Math_1/index.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
